# new_admin_panel_sprint_2

./: setup.cfg
.github/workflows/: code-checker.yaml
django_api/: .env.dev  .env.test  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
django_api/config/: settings.py  urls.py
django_api/movies/: views.py
django_api/movies/api/v1/: mixins.py  urls.py  views.py
django_api/movies/migrations/: 0001_initial.py
django_api/tests/: conftest.py  test_api_v1.py  vars.py
docker_compose/: README.md
docker_compose/simple_project/: .env.example  Makefile  docker-compose-local.yml  docker-compose-prod.yml  docker-compose.yml
docker_compose/simple_project/app/: Dockerfile  entrypoint.sh  requirements.txt
docker_compose/simple_project/app/example/: settings.py
docker_compose/simple_project/app/uwsgi/: uwsgi.ini
docker_compose/simple_project/nginx/: nginx.conf
docker_compose/simple_project/nginx/configs/: site.conf
